--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Views/RechargeAmount.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Views/RechargeAmount.xaml
@@ -37,7 +37,7 @@
                 <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" VerticalAlignment="Top"
                            TextWrapping="WrapWithOverflow" Foreground="Black">Place enter Recharge Amount (in multiples of 10's)</TextBlock>
                 <Grid Grid.Row="1"  Height="50" HorizontalAlignment="Center">
-                    <TextBox x:Name="txtAmount" Width="100" Height="50"
+                    <TextBox x:Name="txtAmount" Width="100" Height="50" MaxLength="4"
                              VerticalContentAlignment="Center" TextAlignment="Right" FontSize="20" Text="{Binding SelectedAmount,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                              />
                     <Button x:Name="btnAmount" Width="100" Height="50"
