--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
@@ -51,6 +51,19 @@
         <Setter Property="TextAlignment" Value="Justify"/>        
     </Style>
 
+    <Style x:Key="contentBoxHome" TargetType="TextBlock">
+        <Setter Property="FontFamily" Value="Segoe UI"/>
+        <Setter Property="FontSize" Value="15"/>
+        <Setter Property="TextAlignment" Value="Justify"/>
+    </Style>
+
+
+    <Style x:Key="contentBoxHomeBorder" TargetType="Border">
+        <Setter Property="BorderBrush" Value="Black"/>
+        <Setter Property="BorderThickness" Value="2"/>
+        <Setter Property="Opacity" Value="50"/>
+    </Style>
+    
     <Style x:Key="instructionsText" TargetType="TextBlock">
         <Setter Property="FontFamily" Value="Segoe UI"/>
         <Setter Property="FontSize" Value="36"/>
