--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Common/Styles.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Common/Styles.xaml
@@ -28,6 +28,18 @@
         <Setter Property="TitleFontSize" Value="10" />
     </Style>
 
+    <Style x:Key="contentBoxHome" TargetType="TextBlock">
+        <Setter Property="FontFamily" Value="Segoe UI"/>
+        <Setter Property="FontSize" Value="15"/>
+        <Setter Property="TextAlignment" Value="Justify"/>
+    </Style>
+
+
+    <Style x:Key="contentBoxHomeBorder" TargetType="Border">
+        <Setter Property="BorderBrush" Value="Black"/>
+        <Setter Property="BorderThickness" Value="2"/>
+        <Setter Property="Opacity" Value="50"/>
+    </Style>
     <Style x:Key="LargeTileStyleTrans" TargetType="Controls:TransitioningContentControl">
         <Setter Property="Width" Value="300" />
         <Setter Property="Height" Value="125" />
