--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/MainWindow.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/MainWindow.xaml
@@ -26,101 +26,147 @@
     </Controls:MetroWindow.Background>
     <Grid x:Name="mainGrid" Margin="5">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width=".6*"/>
-            <ColumnDefinition Width=".4*"/>
+            <ColumnDefinition Width=".35*"/>
+            <ColumnDefinition Width=".35*"/>
+            <ColumnDefinition Width=".29*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height=".2*"/>
-            <RowDefinition Height=".6*"/>
+            <RowDefinition Height=".7*"/>
             <RowDefinition Height=".2*"/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
-            <Label Content="Welcome! Select your desired Service" Style="{StaticResource TitleText}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <Viewbox HorizontalAlignment="Right" VerticalAlignment="Center">
-                <Image x:Name="companyLogo" Source="/Resources/Images/icici.png" Margin="0,0,20,0"/>
-            </Viewbox>
+        <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="/Resources/Images/Hand-Sign-11.png" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource screenLogoImage}"/>
+                <Label Content="Welcome! Select your desired service .." Style="{StaticResource TitleTextLong}" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="-20,0,0,0"/>
+            </StackPanel>
         </Grid>
-        <Grid x:Name="servicesImages" Grid.Row="1" Grid.Column="0">
+        <Image x:Name="companyLogo" Grid.Column="2" Source="/Resources/Images/icici.png" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,20,0"/>
+
+
+        <Grid x:Name="bankLogos" Grid.Row="1" Grid.Column="0">
+
             <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto">
-                <WrapPanel>
-                    <Controls:Tile Style="{StaticResource SmallTileStyle}" Click="Service_click" Tag="Mobile">
-                        <Controls:Tile.Background>
-                            <ImageBrush ImageSource="Resources/Images/icici.png"/>
-                        </Controls:Tile.Background>
-                    </Controls:Tile>
-                    <Controls:Tile Style="{StaticResource SmallTileStyle}">
-                        <Controls:Tile.Background>
-                            <ImageBrush ImageSource="Resources/Images/Axis.jpeg"/>
-                        </Controls:Tile.Background>
-                    </Controls:Tile>
-                    <Controls:Tile Style="{StaticResource SmallTileStyle}">
-                        <Controls:Tile.Background>
-                            <ImageBrush ImageSource="Resources/Images/icici.png"/>
-                        </Controls:Tile.Background>
-                    </Controls:Tile>
-                    <Controls:Tile Style="{StaticResource SmallTileStyle}">
-                        <Controls:Tile.Background>
-                            <ImageBrush ImageSource="Resources/Images/Axis.jpeg"/>
-                        </Controls:Tile.Background>
-                    </Controls:Tile>
-                    <Controls:Tile Style="{StaticResource SmallTileStyle}">
-                        <Controls:Tile.Background>
-                            <ImageBrush ImageSource="Resources/Images/icici.png"/>
-                        </Controls:Tile.Background>
-                    </Controls:Tile>
-                    <Controls:Tile Style="{StaticResource SmallTileStyle}">
-                        <Controls:Tile.Background>
-                            <ImageBrush ImageSource="Resources/Images/Axis.jpeg"/>
-                        </Controls:Tile.Background>
-                    </Controls:Tile>
-                    <Controls:Tile Style="{StaticResource SmallTileStyle}">
-                        <Controls:Tile.Background>
-                            <ImageBrush ImageSource="Resources/Images/icici.png"/>
-                        </Controls:Tile.Background>
-                    </Controls:Tile>
-                    <Controls:Tile Style="{StaticResource SmallTileStyle}">
-                        <Controls:Tile.Background>
-                            <ImageBrush ImageSource="Resources/Images/Axis.jpeg"/>
-                        </Controls:Tile.Background>
-                    </Controls:Tile>
-                    <Controls:Tile Style="{StaticResource SmallTileStyle}">
-                        <Controls:Tile.Background>
-                            <ImageBrush ImageSource="Resources/Images/icici.png"/>
-                        </Controls:Tile.Background>
-                    </Controls:Tile>
-                    <Controls:Tile Style="{StaticResource SmallTileStyle}">
-                        <Controls:Tile.Background>
-                            <ImageBrush ImageSource="Resources/Images/Axis.jpeg"/>
-                        </Controls:Tile.Background>
-                    </Controls:Tile>
-                    <Controls:Tile Style="{StaticResource SmallTileStyle}">
-                        <Controls:Tile.Background>
-                            <ImageBrush ImageSource="Resources/Images/icici.png"/>
-                        </Controls:Tile.Background>
-                    </Controls:Tile>
-                    <Controls:Tile Style="{StaticResource SmallTileStyle}">
-                        <Controls:Tile.Background>
-                            <ImageBrush ImageSource="Resources/Images/Axis.jpeg"/>
-                        </Controls:Tile.Background>
-                    </Controls:Tile>
+                <WrapPanel  FlowDirection="LeftToRight" HorizontalAlignment="Left">
+                    <Label Content="Popular Services" Style="{StaticResource TitleTextLong}" HorizontalAlignment="Left" />
+
+                    <Controls:TransitioningContentControl x:Name="AIXS"
+                                                  Transition="Up"  >
+                    </Controls:TransitioningContentControl>
+                    <Controls:TransitioningContentControl x:Name="GNI"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+                    <Controls:TransitioningContentControl x:Name="Telangana"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+                    <Controls:TransitioningContentControl x:Name="HFDC"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+                    <Controls:TransitioningContentControl x:Name="CICIC"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+                    <Controls:TransitioningContentControl x:Name="Kanara"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+                    <Controls:TransitioningContentControl x:Name="BankOfIndia"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+                    <Controls:TransitioningContentControl x:Name="HSBC"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
                 </WrapPanel>
             </ScrollViewer>
+
         </Grid>
-        <Grid x:Name="rightStaticText" Grid.Row="1" Grid.Column="1">
-            <Border Style="{StaticResource contentBoxBorder}" Margin="5,5,5,20">
-                <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="5">
-                    <TextBlock TextWrapping="Wrap" Style="{StaticResource contentBoxText}">
-                Welcome to TAJ DECCAN, Banjara Hills, Hyderabad Citizen Kiosk.
-                    <LineBreak/>
-                    <LineBreak/>
-                 This Citizen Kiosk is managed by DOYENBIZ. For any queries or complaints, please contact us at 9000090000.
-                    <LineBreak/>
-                    </TextBlock>
-                </ScrollViewer>
+
+        <Grid x:Name="allBanks" Grid.Row="1" Grid.Column="1">
+
+            <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto">
+                <WrapPanel  FlowDirection="LeftToRight" HorizontalAlignment="Left">
+                    <Label Content="All Banks                            " Style="{StaticResource TitleTextLong}" HorizontalAlignment="Left" />
+                    <Controls:TransitioningContentControl x:Name="DBI"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+                    <Controls:TransitioningContentControl x:Name="srb"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+                    <Controls:TransitioningContentControl x:Name="Uinon"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+                    <Controls:TransitioningContentControl x:Name="india_oversi"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+                    <Controls:TransitioningContentControl x:Name="patelco"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+                    <Controls:TransitioningContentControl x:Name="DEUTSCHE"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+
+                    <Controls:TransitioningContentControl x:Name="Alliance"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+
+                    <Controls:TransitioningContentControl x:Name="IndusInd"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+                    <Controls:TransitioningContentControl x:Name="marudhara"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+                    <Controls:TransitioningContentControl x:Name="srb1"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+                    <Controls:TransitioningContentControl x:Name="ocbc"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+                    <Controls:TransitioningContentControl x:Name="orporation"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+
+
+
+                </WrapPanel>
+            </ScrollViewer>
+
+        </Grid>
+        <Grid x:Name="rightStaticText" Grid.Row="1" Grid.Column="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width=".4*"/>
+                <ColumnDefinition Width=".2*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="100"/>
+                <RowDefinition Height="100"/>
+                <RowDefinition Height="100"/>
+            </Grid.RowDefinitions>
+
+            <Label Content="About                      " Style="{StaticResource TitleTextLong}" HorizontalAlignment="Left" Grid.Row="0" />
+
+            <Border Style="{StaticResource contentBoxHomeBorder}" Grid.Row="1" Grid.Column="0" Grid.RowSpan="2">
+                <TextBlock TextWrapping="Wrap" Width="180" HorizontalAlignment="Left" Style="{StaticResource contentBoxHome}"  >
+                This ATM uses a two-factor Biometric Authentication to check you are the account holder. By continuing to use the ATM services, you agree to provide you finger print and you agree to have your picture taken
+                </TextBlock>
+            </Border>
+            <Border Style="{StaticResource contentBoxHomeBorder}"  Grid.Row="1" Grid.Column="1" Margin="10,0,0,0">
+                <TextBlock TextWrapping="Wrap" Width="90" HorizontalAlignment="Left" Style="{StaticResource contentBoxHome}"  >
+                            Your Feedback is valuable to us <LineBreak />
+                </TextBlock>
+            </Border>
+            <Border Style="{StaticResource contentBoxHomeBorder}"  Grid.Row="2" Grid.Column="1"  Margin="10,10,0,0">
+                <TextBlock TextWrapping="Wrap" Width="90" HorizontalAlignment="Left" Style="{StaticResource contentBoxHome}"  >
+                            DoyenBiz - Abouris <LineBreak />
+                </TextBlock>
+            </Border>
+
+            <Border Style="{StaticResource contentBoxHomeBorder}"  Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,10,00,0">
+                <TextBlock TextWrapping="Wrap" Width="210" HorizontalAlignment="Left" Style="{StaticResource contentBoxHome}" FontSize="15"  >
+                            Need Help Or support? Call us on 1-800-BANKING-KIOSK <LineBreak />
+                </TextBlock>
             </Border>
         </Grid>
-        <StackPanel x:Name="footerGrid" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Right" Orientation="Horizontal" VerticalAlignment="Center">
+        <StackPanel x:Name="footerGrid" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Right" Orientation="Horizontal" VerticalAlignment="Center">
             <Label x:Name="footerBalanceLabel" Content="Kiosk Pre-Paid Balance" FontSize="24"></Label>
             <Label x:Name="footerBalanceCurrency" Content="INR" FontSize="24" Foreground="Green"></Label>
             <TextBlock x:Name="footerBalanceValue" VerticalAlignment="Center" Text="{Binding Balance,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" FontSize="24" Foreground="Green"></TextBlock>
