--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/MainWindow.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/MainWindow.xaml
@@ -85,9 +85,27 @@
             <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto">
                 <WrapPanel  FlowDirection="LeftToRight" HorizontalAlignment="Left">
                     <Label Content="All Banks                            " Style="{StaticResource TitleTextLong}" HorizontalAlignment="Left" />
-                    <Controls:TransitioningContentControl x:Name="DBI"
+                    <Controls:TransitioningContentControl x:Name="mobile"
                                                   Transition="Up">
                     </Controls:TransitioningContentControl>
+                    <Controls:Tile Style="{StaticResource SmallTileStyle}" >
+                        <Controls:Tile.Background>
+                            <ImageBrush ImageSource="Resources/Images/university_services.jpg"/>
+                        </Controls:Tile.Background>
+                    </Controls:Tile>
+                    <Controls:TransitioningContentControl x:Name="utility"
+                                                  Transition="Up">
+                    </Controls:TransitioningContentControl>
+                    <Controls:Tile Style="{StaticResource LargeTileStyle}" >
+                        <Controls:Tile.Background>
+                            <ImageBrush ImageSource="Resources/Images/electricity.jpg"/>
+                        </Controls:Tile.Background>
+                    </Controls:Tile>
+                    <Controls:Tile Style="{StaticResource LargeTileStyle}" >
+                        <Controls:Tile.Background>
+                            <ImageBrush ImageSource="Resources/Images/train_ticket_boking.jpg"/>
+                        </Controls:Tile.Background>
+                    </Controls:Tile>
                     <Controls:TransitioningContentControl x:Name="srb"
                                                   Transition="Up">
                     </Controls:TransitioningContentControl>
@@ -145,9 +163,14 @@
             <Label Content="About                      " Style="{StaticResource TitleTextLong}" HorizontalAlignment="Left" Grid.Row="0" />
 
             <Border Style="{StaticResource contentBoxHomeBorder}" Grid.Row="1" Grid.Column="0" Grid.RowSpan="2">
-                <TextBlock TextWrapping="Wrap" Width="180" HorizontalAlignment="Left" Style="{StaticResource contentBoxHome}"  >
+
+                <Controls:TransitioningContentControl x:Name="about"
+                                                  Transition="Up" Tag="Text">
+                    <TextBlock TextWrapping="Wrap" Width="230" HorizontalAlignment="Left" Style="{StaticResource contentBoxHome}"  >
                 This ATM uses a two-factor Biometric Authentication to check you are the account holder. By continuing to use the ATM services, you agree to provide you finger print and you agree to have your picture taken
-                </TextBlock>
+                    </TextBlock>
+                </Controls:TransitioningContentControl>
+                
             </Border>
             <Border Style="{StaticResource contentBoxHomeBorder}"  Grid.Row="1" Grid.Column="1" Margin="10,0,0,0">
                 <TextBlock TextWrapping="Wrap" Width="90" HorizontalAlignment="Left" Style="{StaticResource contentBoxHome}"  >
